# varchunk

./: .gitignore  .gitlab-ci.yml  README.md  meson.build  meson_options.txt  test.c  test_varchunk.c  varchunk.c  varchunk.h
gitlab-ci/: generic.yml
src/: varchunk.c
test/: test.c
